# qsh

./: .cursorrules  .gitignore  Makefile  README.md  cdk.json  handler.py  infra.py  pyproject.toml  samconfig.toml  serverless.yml  template.yaml  test_handler.py
.github/workflows/: build.yml  deploy.yml
qsh/: app.py  prompts.py
scripts/: build-layer.sh
