[project]
name = "qsh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[tracer]>=3.6.0",
    "fastapi>=0.115.8",
    "mangum>=0.19.0",
    "openai>=1.63.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "uvicorn>=0.34.0",
]
