[project]
name = "qsh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "hishel[s3]>=0.1.1",
    "mangum>=0.19.0",
    "openai>=1.63.2",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.179.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "uvicorn>=0.34.0",
]
