[project]
name = "qsh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.8",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-openai>=1.0.2",
    "mangum>=0.19.0",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.179.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
